# customer_segmentation-clustering

./: README.md  pyproject.toml
data/transformed/: agc_data.csv  clean_rfm_data.csv  dbscan_data.csv  kmeans_data.csv  std_norm_rfm_data.csv
notebooks/: 02_KMeansClustering.ipynb
src/: paths.py
