[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["fabiansum <fab.sumarna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
plotly = "^5.13.1"
matplotlib = "^3.7.0"
scikit-learn = "^1.2.1"
yellowbrick = "^1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
